--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
     "packages/*"
   ],
   "scripts": {
-    "dev": "vite",
-    "build:backend": "yarn workspace @webcam/backend build",
     "build:frontend": "yarn workspace @webcam/frontend build",
-    "build:docker:backend": "docker build --no-cache -t 935995184596.dkr.ecr.us-east-1.amazonaws.com/webcam -f ./packages/backend/Dockerfile .",
-    "build:docker:frontend": "docker build --no-cache -t 935995184596.dkr.ecr.us-east-1.amazonaws.com/webcam -f ./packages/backend/Dockerfile ."
+    "build:docker:frontend:staging": "docker build --build-arg ENV_MODE=staging -t 935995184596.dkr.ecr.us-east-1.amazonaws.com/webcam/frontend -f ./packages/frontend/Dockerfile .",
+    "---------------- backend------------": "",
+    "build:backend": "yarn workspace @webcam/backend build",
+    "build:docker:backend:staging": "docker build --build-arg ENV_FILE=.env.staging -t 935995184596.dkr.ecr.us-east-1.amazonaws.com/webcam/backend -f ./packages/backend/Dockerfile ."
   }
 }
