--- a/packages/frontend/.env.staging
+++ b/packages/frontend/.env.staging
@@ -1,1 +1,1 @@
-VITE_APP_URL="https://ec2-54-86-230-226.compute-1.amazonaws.com:5001"
+VITE_APP_URL=http://ec2-54-86-230-226.compute-1.amazonaws.com:3001
