--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
     "packages/*"
   ],
   "scripts": {
+    "dev:frontend": "yarn workspace @webcam/frontend dev",
     "build:frontend": "yarn workspace @webcam/frontend build",
     "build:docker:frontend:staging": "docker build --build-arg ENV_MODE=staging -t 935995184596.dkr.ecr.us-east-1.amazonaws.com/webcam-frontend -f ./packages/frontend/Dockerfile .",
     "---------------- backend------------": "",
+    "dev:backend": "yarn workspace @webcam/backend start:dev",
     "build:backend": "yarn workspace @webcam/backend build",
     "build:docker:backend:staging": "docker build --build-arg ENV_FILE=.env.staging -t 935995184596.dkr.ecr.us-east-1.amazonaws.com/webcam-backend -f ./packages/backend/Dockerfile ."
   }
