--- a/packages/frontend/.env.staging
+++ b/packages/frontend/.env.staging
@@ -1,1 +1,2 @@
-VITE_APP_URL=http://ec2-34-227-66-88.compute-1.amazonaws.com:3001
+VITE_APP_URL=http://ec2-100-24-12-229.compute-1.amazonaws.com:3001
+VITE_SOCKET_URL=ws://ec2-100-24-12-229.compute-1.amazonaws.com:3001
