--- a/packages/backend/tsconfig.json
+++ b/packages/backend/tsconfig.json
@@ -11,9 +11,16 @@
     "baseUrl": "./",
     "incremental": true,
     "paths": {
-      "@common": ["../common/src"],
-      "src/*": ["./src/*"]
+      "@common": [
+        "../common/src"
+      ],
+      "src/*": [
+        "./src/*"
+      ]
     }
   },
-  "exclude": ["node_modules", "dist"]
+  "exclude": [
+    "node_modules",
+    "dist"
+  ]
 }
