Update package json

--- a/packages/frontend/.env.staging
+++ b/packages/frontend/.env.staging
@@ -1,2 +1,5 @@
-VITE_APP_URL=http://ec2-100-24-12-229.compute-1.amazonaws.com:3001
-VITE_SOCKET_URL=ws://ec2-100-24-12-229.compute-1.amazonaws.com:3001
+VITE_STREAMER_APP_URL=http://ec2-100-24-12-229.compute-1.amazonaws.com:3001
+VITE_STREAMER_SOCKET_URL=ws://ec2-100-24-12-229.compute-1.amazonaws.com:3001
+
+VITE_PLAYER_APP_URL=http://ec2-100-24-12-229.compute-1.amazonaws.com:3002
+VITE_PLAYER_SOCKET_URL=ws://ec2-100-24-12-229.compute-1.amazonaws.com:3002
