--- a/packages/backend/apps/streamer/tsconfig.app.json
+++ b/packages/backend/apps/streamer/tsconfig.app.json
@@ -2,7 +2,7 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "declaration": false,
-    "outDir": "../../dist/apps/webcam-backend"
+    "outDir": "../../dist/apps/streamer"
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist", "test", "**/*spec.ts"]
