--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -5,18 +5,20 @@
   "license": "MIT",
   "scripts": {
     "build": "nest build",
-    "format": "prettier --write \"apps/**/*.ts\" \"libs/**/*.ts\"",
-    "start": "nest start",
-    "start:dev": "nest start --watch",
-    "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/apps/webcam-backend/main",
+    "format": "prettier --write \"apps/**/*.ts\"",
+    "----streamer----": "",
+    "start:streamer:dev": "nest start streamer --watch",
+    "start:streamer:debug": "nest start streamer --debug --watch",
+    "----player----": "",
+    "start:player:dev": "nest start player --watch",
+    "start:player:debug": "nest start player --debug --watch",
+    "----rest----": "",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./apps/webcam-backend/test/jest-e2e.json",
-    "dev": "yarn start:dev"
+    "test:e2e": "jest --config ./apps/webcam-backend/test/jest-e2e.json"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
