--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "dev:frontend": "yarn workspace @webcam/frontend dev",
     "build:frontend": "yarn workspace @webcam/frontend build",
     "build:docker:frontend:staging": "docker build --build-arg ENV_MODE=staging -t 935995184596.dkr.ecr.us-east-1.amazonaws.com/webcam-frontend -f ./packages/frontend/Dockerfile .",
-    "---------------- backend------------": "",
-    "dev:backend": "yarn workspace @webcam/backend start:dev",
+    "---- streamer-backend ----": "",
+    "start:streamer:dev": "yarn workspace @webcam/backend start:streamer:dev",
     "build:backend": "yarn workspace @webcam/backend build",
-    "build:docker:backend:staging": "docker build --build-arg ENV_FILE=.env.staging -t 935995184596.dkr.ecr.us-east-1.amazonaws.com/webcam-backend -f ./packages/backend/Dockerfile ."
+    "build:docker:backend:streamer:staging": "docker build --build-arg ENV_FILE=.env.staging -t 935995184596.dkr.ecr.us-east-1.amazonaws.com/webcam-backend -f ./packages/backend/Dockerfile .",
+    "---- streamer-player ----": "",
+    "start:visualizer:dev": "yarn workspace @webcam/backend start:visualizer:dev",
+    "build:docker:backend:visualizer:staging": "docker build --build-arg ENV_FILE=.env.staging -t 935995184596.dkr.ecr.us-east-1.amazonaws.com/webcam-backend -f ./packages/backend/Dockerfile ."
   }
 }
