--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -7,11 +7,11 @@
     "build": "nest build",
     "format": "prettier --write \"apps/**/*.ts\"",
     "---- streamer ----": "",
-    "start:streamer:dev": "nest start streamer --watch",
-    "start:streamer:debug": "nest start streamer --debug --watch",
+    "start:streamer:dev": "CONTENT_FOLDER='/home/red-tech/dev/public' APP_PORT=3001 nest start streamer --watch",
+    "start:streamer:debug": "CONTENT_FOLDER='/home/red-tech/dev/public' APP_PORT=3001 nest start streamer --debug --watch",
     "---- player ----": "",
-    "start:player:dev": "nest start player --watch",
-    "start:player:debug": "nest start player --debug --watch",
+    "start:player:dev": "CONTENT_FOLDER='/home/red-tech/dev/public' APP_PORT=3002 nest start player --watch",
+    "start:player:debug": "CONTENT_FOLDER='/home/red-tech/dev/public' APP_PORT=3002 nest start player --debug --watch",
     "---- rest ----": "",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
