--- a/packages/common/tsconfig.json
+++ b/packages/common/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "moduleResolution": "NodeNext",
     "target": "ES5",
     "useDefineForClassFields": true,
     "module": "ESNext",
