Update the srvices

--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -10,8 +10,8 @@
     "start:streamer:dev": "CONTENT_FOLDER='/home/red-tech/dev/public' APP_PORT=3001 nest start streamer --watch",
     "start:streamer:debug": "CONTENT_FOLDER='/home/red-tech/dev/public' APP_PORT=3001 nest start streamer --debug --watch",
     "---- player ----": "",
-    "start:player:dev": "CONTENT_FOLDER='/home/red-tech/dev/public' APP_PORT=3002 nest start player --watch",
-    "start:player:debug": "CONTENT_FOLDER='/home/red-tech/dev/public' APP_PORT=3002 nest start player --debug --watch",
+    "start:visualizer:dev": "CONTENT_FOLDER='/home/red-tech/dev/public' APP_PORT=3002 nest start visualizer --watch",
+    "start:visualizer:debug": "CONTENT_FOLDER='/home/red-tech/dev/public' APP_PORT=3002 nest start visualizer --debug --watch",
     "---- rest ----": "",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
@@ -28,6 +28,7 @@
     "@nestjs/platform-socket.io": "^10.2.0",
     "@nestjs/websockets": "^10.1.0",
     "@types/fluent-ffmpeg": "^2.1.21",
+    "chokidar": "^3.5.3",
     "ffmpeg-static": "^5.2.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
