--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "---- streamer-backend ----": "",
     "start:streamer:dev": "yarn workspace @webcam/backend start:streamer:dev",
     "build:backend": "yarn workspace @webcam/backend build",
-    "build:docker:backend:streamer:staging": "docker build --build-arg ENV_FILE=.env.staging -t 935995184596.dkr.ecr.us-east-1.amazonaws.com/webcam-backend -f ./packages/backend/Dockerfile .",
+    "build:docker:backend:streamer:staging": "docker build --build-arg CONTENT_FOLDER='/home/ubuntu/photos' -t 935995184596.dkr.ecr.us-east-1.amazonaws.com/webcam-streamer-backend -f ./packages/backend/apps/streamer/Dockerfile .",
     "---- streamer-player ----": "",
     "start:visualizer:dev": "yarn workspace @webcam/backend start:visualizer:dev",
-    "build:docker:backend:visualizer:staging": "docker build --build-arg ENV_FILE=.env.staging -t 935995184596.dkr.ecr.us-east-1.amazonaws.com/webcam-backend -f ./packages/backend/Dockerfile ."
+    "build:docker:backend:visualizer:staging": "docker build --build-arg CONTENT_FOLDER='/home/ubuntu/photos' -t 935995184596.dkr.ecr.us-east-1.amazonaws.com/webcam-visualizer-backend -f ./packages/backend/apps/visualizer/Dockerfile ."
   }
 }
