--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -9,6 +9,7 @@
     "---- streamer ----": "",
     "start:streamer:dev": "CONTENT_FOLDER='/home/red-tech/dev/public' APP_PORT=3001 nest start streamer --watch",
     "start:streamer:debug": "CONTENT_FOLDER='/home/red-tech/dev/public' APP_PORT=3001 nest start streamer --debug --watch",
+    "start:streamer:build": "CONTENT_FOLDER='/home/red-tech/dev/public' APP_PORT=3001 node ./dist/backend/apps/streamer/src/main.js",
     "---- player ----": "",
     "start:visualizer:dev": "CONTENT_FOLDER='/home/red-tech/dev/public' APP_PORT=3002 nest start visualizer --watch",
     "start:visualizer:debug": "CONTENT_FOLDER='/home/red-tech/dev/public' APP_PORT=3002 nest start visualizer --debug --watch",
@@ -27,7 +28,6 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/platform-socket.io": "^10.2.0",
     "@nestjs/websockets": "^10.1.0",
-    "@types/fluent-ffmpeg": "^2.1.21",
     "chokidar": "^3.5.3",
     "ffmpeg-static": "^5.2.0",
     "reflect-metadata": "^0.1.13",
@@ -42,7 +42,6 @@
     "@swc/core": "^1.3.64",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
-    "@types/multer": "^1.4.7",
     "@types/node": "^20.4.5",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.59.11",
