--- a/packages/backend/apps/visualizer/Dockerfile
+++ b/packages/backend/apps/visualizer/Dockerfile
@@ -24,8 +24,8 @@ RUN yarn build:backend
 # Runtime (production) layer
 FROM node:16-alpine as production
 
-ARG CONTENT_FOLDER
-ENV CONTENT_FOLDER=$CONTENT_FOLDER
+ARG IMAGE_SOCKET_SERVER_URL
+ENV IMAGE_SOCKET_SERVER_URL=$IMAGE_SOCKET_SERVER_URL
 
 ENV APP_PORT=3001
 
