--- a/packages/frontend/.env.staging
+++ b/packages/frontend/.env.staging
@@ -1,5 +1,5 @@
-VITE_STREAMER_APP_URL=http://ec2-18-232-80-240.compute-1.amazonaws.com:3001
-VITE_STREAMER_SOCKET_URL=ws://ec2-18-232-80-240.compute-1.amazonaws.com:3001
+VITE_STREAMER_APP_URL=https://webcam-streamer.red-tech.cloud
+VITE_STREAMER_SOCKET_URL=wss://webcam-streamer.red-tech.cloud
 
-VITE_PLAYER_APP_URL=http://ec2-18-232-80-240.compute-1.amazonaws.com:3002
-VITE_PLAYER_SOCKET_URL=ws://ec2-18-232-80-240.compute-1.amazonaws.com:3002
+VITE_PLAYER_APP_URL=https://webcam-player.red-tech.cloud
+VITE_PLAYER_SOCKET_URL=wss://webcam-player.red-tech.cloud
