--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -7,11 +7,11 @@
     "build": "nest build",
     "format": "prettier --write \"apps/**/*.ts\"",
     "---- streamer ----": "",
-    "start:streamer:dev": "IMAGE_SOCKET_SERVER_URL='ws://localhost:3002' CONTENT_FOLDER='/home/red-tech/dev/public' APP_PORT=3001 nest start streamer --watch",
-    "start:streamer:debug": "IMAGE_SOCKET_SERVER_URL='ws://localhost:3002' CONTENT_FOLDER='/home/red-tech/dev/public' APP_PORT=3001 nest start streamer --debug --watch",
+    "start:streamer:dev": "IMAGE_SOCKET_SERVER_URL='ws://localhost:3002' APP_PORT=3001 nest start streamer --watch",
+    "start:streamer:debug": "IMAGE_SOCKET_SERVER_URL='ws://localhost:3002' APP_PORT=3001 nest start streamer --debug --watch",
     "---- player ----": "",
-    "start:visualizer:dev": "CONTENT_FOLDER='/home/red-tech/dev/public' APP_PORT=3002 nest start visualizer --watch",
-    "start:visualizer:debug": "CONTENT_FOLDER='/home/red-tech/dev/public' APP_PORT=3002 nest start visualizer --debug --watch",
+    "start:visualizer:dev": "APP_PORT=3002 nest start visualizer --watch",
+    "start:visualizer:debug": "APP_PORT=3002 nest start visualizer --debug --watch",
     "---- rest ----": "",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
