--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@hookform/resolvers": "^3.3.0",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-select": "^1.2.2",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.1.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "lucide-react": "^0.268.0",
