--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -30,6 +30,7 @@
     "@nestjs/platform-socket.io": "^10.2.0",
     "@nestjs/websockets": "^10.1.0",
     "chokidar": "^3.5.3",
+    "class-transformer": "^0.5.1",
     "ffmpeg-static": "^5.2.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
