--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -9,5 +9,8 @@
     "@typescript-eslint/parser": "^6.0.0",
     "eslint": "^8.45.0",
     "typescript": "^5.0.2"
+  },
+  "dependencies": {
+    "class-transformer": "^0.5.1"
   }
 }
