--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -9,16 +9,11 @@
     "---- streamer ----": "",
     "start:streamer:dev": "IMAGE_SOCKET_SERVER_URL='ws://localhost:3002' APP_PORT=3001 nest start streamer --watch",
     "start:streamer:debug": "IMAGE_SOCKET_SERVER_URL='ws://localhost:3002' APP_PORT=3001 nest start streamer --debug --watch",
+    "test:streamer": "jest",
+    "test:e2e:streamer": "jest --config ./apps/streamer/test/jest-e2e.json",
     "---- player ----": "",
     "start:visualizer:dev": "APP_PORT=3002 nest start visualizer --watch",
-    "start:visualizer:debug": "APP_PORT=3002 nest start visualizer --debug --watch",
-    "---- rest ----": "",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:cov": "jest --coverage",
-    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./apps/webcam-backend/test/jest-e2e.json"
+    "start:visualizer:debug": "APP_PORT=3002 nest start visualizer --debug --watch"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
