--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -46,6 +46,7 @@
     "tailwindcss": "^3.3.3",
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
-    "vitest": "^0.34.3"
+    "vitest": "^0.34.3",
+    "socket.io": "^4.7.2"
   }
 }
