--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -43,10 +43,10 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "postcss": "^8.4.28",
+    "socket.io": "^4.7.2",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
-    "vitest": "^0.34.3",
-    "socket.io": "^4.7.2"
+    "vitest": "^0.34.3"
   }
 }
