--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -7,7 +7,8 @@
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "test": "vitest"
+    "test": "vitest run",
+    "test:watch": "vitest"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.0",
@@ -42,6 +43,7 @@
     "eslint": "^8.45.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "happy-dom": "^10.11.2",
     "postcss": "^8.4.28",
     "socket.io": "^4.7.2",
     "tailwindcss": "^3.3.3",
