--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dev:streamer": "yarn workspace @webcam/backend start:streamer:dev",
     "build:backend": "yarn workspace @webcam/backend build",
     "---- streamer-player ----": "",
-    "dev:visualizer": "yarn workspace @webcam/backend start:visualizer:dev"
+    "dev:visualizer": "yarn workspace @webcam/backend start:visualizer:dev",
+    "test": "yarn workspace @webcam/backend test:streamer && yarn workspace @webcam/backend test:visualizer && yarn workspace @webcam/frontend test"
   }
 }
