--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "webcam-analyzer",
   "private": true,
   "workspaces": [
-    "packages/*"
+    "packages/backend",
+    "packages/frontend"
   ],
   "scripts": {
     "dev:frontend": "yarn workspace @webcam/frontend dev",
