--- a/packages/frontend-api/tsconfig.json
+++ b/packages/frontend-api/tsconfig.json
@@ -9,11 +9,10 @@
 
     /* Bundler mode */
     "moduleResolution": "bundler",
-    "allowImportingTsExtensions": true,
+    "declaration": true,
     "experimentalDecorators": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "noEmit": true,
     "jsx": "react-jsx",
 
     /* Linting */
@@ -26,8 +25,7 @@
       "@webcam/common": ["../common/src"]
     },
     "baseUrl": "./",
-    "outDir": "lib"
+    "outDir": "./lib"
   },
-  "include": ["src"],
-  "exclude": []
+  "include": ["src"]
 }
