--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -25,11 +25,11 @@
     "react-hook-form": "^7.45.4",
     "react-router-dom": "^6.15.0",
     "reflect-metadata": "^0.1.13",
-    "socket.io-client": "^4.7.2",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.6",
     "uuid": "^9.0.0",
-    "zod": "^3.22.2"
+    "zod": "^3.22.2",
+    "@webcam/frontend-api": "*"
   },
   "devDependencies": {
     "@types/node": "^20.4.5",
@@ -44,7 +44,6 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "happy-dom": "^10.11.2",
-    "socket.io": "^4.7.2",
     "postcss": "^8.4.28",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.0.2",
