--- a/k8s/deployment.yaml.example
+++ b/k8s/deployment.yaml.example
@@ -22,6 +22,9 @@ spec:
           imagePullPolicy: Always
           ports:
             - containerPort: 3001
+          env:
+            - name: IMAGE_SOCKET_SERVER_URL
+              value: ws://test-repo-wc-visualizer-backend-service:3001s
 ---
 apiVersion: v1
 kind: Service
